@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,6 @@ package jdk.internal.module;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleDescriptor.Provides;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -87,7 +86,7 @@ public final class ServicesCatalog {
     private ServicesCatalog() { }
 
     /**
-     * Creates a ServicesCatalog that supports concurrent registration and
+     * Creates a ServicesCatalog that supports concurrent registration
      * and lookup
      */
     public static ServicesCatalog create() {
@@ -147,7 +146,7 @@ public final class ServicesCatalog {
      * the given service type.
      */
     public List<ServiceProvider> findServices(String service) {
-        return map.getOrDefault(service, Collections.emptyList());
+        return map.getOrDefault(service, List.of());
     }
 
     /**
